<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arif_ginanjar.lesson3viewandviews.MainActivity"
    android:background="@android:color/white"
    android:id="@+id/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/pixel_google"
                android:scaleType="fitXY"
                android:contentDescription="@string/todo" />

            <TextView
                style="@style/TextContent.Small.White"
                android:padding="8dp"
                android:text="@string/_5_photos"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_collections_white_18dp"
                android:drawablePadding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:background="#4D000000"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="bottom"/>

        </FrameLayout>

        <TextView
            style="@style/TextContent.Black"
            android:textSize="32sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:text="@string/_999"/>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/limited_edition_stock"
            />

        <TextView
            style="@style/TextContent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"
            android:text="@string/content_description"/>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/spesification"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/display"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_display"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/size"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_size"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/battery"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/content_specs_battery"/>

            </TableRow>

        </TableLayout>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/sell_by"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/activity_main_foto_profile"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:src="@drawable/foto"/>

            <TextView
                style="@style/TextContent"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/activity_main_foto_profile"
                android:text="@string/arif_ginanjar" />

        </RelativeLayout>

        <Button
            style="@style/ButtonGeneral"
            android:text="@string/buy_it" />

    </LinearLayout>

</ScrollView>